[package]
name = "egui_heatmap"
version = "0.4.5"
authors = ["Michael Völkl <michaelvoelkl@zoho.com>"]
description = "Navigatable heatmap for use together with egui"
edition = "2021"
rust-version = "1.65"
homepage = "https://github.com/voelklmichael/egui_heatmap"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/voelklmichael/egui_heatmap"
categories = ["gui", "science", "visualization"]
keywords = ["gui", "data-science", "image"]
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
ab_glyph = "0.2.29"
arboard = "3.2.0"
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["image"] }
font8x8 = "0.3.1"
image = "0.25.4"
oklab = "1.0.0"
serde = { version = "1.0.163", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.4.0", features = ["std"] }

